# gtk-office-suite

./: .gitignore  .token  AGENT-REFERENCE-LIBRARY.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  IMPLEMENTATION-QUEUE.md  PLAN.md  README.md  gtk-office-suite-handoff.md
.config/: nextest.toml
.github/workflows/: ci.yml  gui-tests.yml  nightly.yml  publish-decks.yml  publish-flatpak.yml  publish-letters.yml  publish-tables.yml  publish.yml  screenshots.yml
.pi/goals/: active_goal_2026062315561696_mqqi1jwm-5ohz96.md  active_goal_2026062319481984_mqqqbyv7-x04fw3.md  active_goal_2026062322290239_mqqw2n3v-ho4w1q.md  active_goal_2026062322584463_mqqx4uao-ncn6r8.md  active_goal_2026062323283092_mqqy74ln-2otxd6.md  active_goal_2026062412542206_mqrqzgkw-qkrpas.md  goal_events.jsonl
.pi/goals/archived/: goal_2026062318051855_mqqi1jwm-5ohz96.md  goal_2026062319453420_mqqmu6sx-txlejc.md
conformance/: scorecard.py
decks/: Cargo.toml
decks-core/: Cargo.toml
decks-core/examples/: make_demo_pptx.rs
decks-core/src/: controller.rs  engine.rs  fragment.rs  lib.rs  odp.rs  snapshot.rs  undo.rs
decks-core/tests/: lo_parity.rs  property.rs  soffice_oracle.rs
decks/src/: canvas.rs  canvas_area.rs  engine.rs  export.rs  main.rs  markdown.rs  preferences.rs  sidebar.rs  toolbar.rs  transition.rs  undo.rs  window.rs
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DESIGN-UI.md  DEVELOPMENT.md  GNOME-AUDIT-2026-06.md  GNOME-GUIDELINES.md  ISSUE-BACKLOG-2026-07.md  PARITY.md  PRODUCT-QUALITY-ROADMAP-2026-07.md  ROADMAP.md  TESTING.md  gnome-hig-audit-results-2026-06-25.md
docs/adr/: 0001-core-shell-split.md  0002-gui-testing-strategy.md  0003-later-tier-scope.md
docs/blog/: 2026-07-18-oracle-not-port.md
docs/screenshots/: README.md
flathub/: README.md  org.tunaos.decks-rust.json  org.tunaos.letters-rust.json  org.tunaos.tables-rust.json
flatpak/: gschemas.compiled  org.tunaos.decks-rust.desktop  org.tunaos.decks-rust.gschema.xml  org.tunaos.decks-rust.json  org.tunaos.decks-rust.metainfo.xml  org.tunaos.letters-rust.desktop  org.tunaos.letters-rust.gschema.xml  org.tunaos.letters-rust.json  org.tunaos.letters-rust.metainfo.xml  org.tunaos.tables-rust.desktop  org.tunaos.tables-rust.gschema.xml  org.tunaos.tables-rust.json  org.tunaos.tables-rust.metainfo.xml
letters/: Cargo.toml
letters-core/: Cargo.toml  DESIGN.md
letters-core/examples/: cm_probe.rs  fnprobe.rs
letters-core/src/: docx.rs  fragment.rs  lib.rs  markdown.rs  model.rs  odt.rs  session.rs
letters-core/tests/: corpus_debug.rs  docx.rs  lo_parity.rs  markdown_corpus.rs  model.rs  property.rs  soffice_oracle.rs
letters-core/tests/corpus/: README.md
letters/src/: bridge.rs  docx_bridge.rs  engine.rs  export.rs  layout.rs  main.rs  page_container.rs  preferences.rs  print_preview.rs  ruler.rs  spell.rs  styles.rs  window.rs
po/: LINGUAS  README.md  gtk-office-suite.pot
scripts/: update-pot.sh
skills/broadway-inspect/: SKILL.md  broadway_inspect.py  vision_inspect.py
suite-common/: Cargo.toml
suite-common-core/: Cargo.toml
suite-common-core/src/: actions.rs  atomic_save.rs  autosave.rs  events.rs  format.rs  lib.rs  palette.rs  print.rs  search.rs  string_pool.rs  style.rs  undo.rs  units.rs
suite-common/src/: file_dialogs.rs  format.rs  lib.rs  toast_manager.rs
suite-export/: Cargo.toml
suite-export/src/: lib.rs
tables/: Cargo.toml
tables-core/: Cargo.toml
tables-core/examples/: make_demo_xlsx.rs
tables-core/src/: controller.rs  engine.rs  export.rs  fill.rs  fragment.rs  io.rs  lib.rs  sheet.rs  snapshot.rs  undo.rs
tables-core/tests/: openformula.rs  property.rs  soffice_oracle.rs
tables/src/: charts.rs  engine.rs  grid.rs  grid_area.rs  grid_render.rs  main.rs  preferences.rs  undo.rs  window.rs
tests/gui/: capture_walkthrough.sh  run_gui_tests.sh  screenshot_app.sh  test_decks.py  test_letters.py  test_smoke.py  test_tables.py  walkthrough.py
tests/gui/demo/: quarterly-report.md
tests/gui/framework/: base.py
