[package]
name = "decks-core"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

# GTK-free presentation core: Deck/Slide/SlideObject model, PPTX I/O,
# undo commands. Must never depend on gtk4/cairo/pango — see
# docs/DEVELOPMENT.md layering rule.
[dependencies]
suite-common-core = { path = "../suite-common-core" }
letters-core = { path = "../letters-core" }
zip = "8.0"
quick-xml = "0.41"

[dev-dependencies]
tempfile = "3"
proptest = "1"

[lib]
name = "decks_core"
path = "src/lib.rs"
