[package]
name = "decks"
version = "0.1.0"
edition = "2021"
[dependencies]
gtk4 = { version = "0.9", package = "gtk4" }
libadwaita = { version = "0.7", features = ["v1_6"] }
ppt-rs = "0.2"
cairo-rs = "0.20"
pangocairo = "0.20"
suite-common = { path = "../suite-common" }
[[bin]]
name = "decks"
path = "src/main.rs"
