[package]
name = "decks"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_14"] }
libadwaita = { version = "0.9", features = ["v1_5"] }
suite-common = { path = "../suite-common" }
decks-core = { path = "../decks-core" }
suite-export = { path = "../suite-export" }
cairo-rs = { version = "0.22", features = ["png"] }
pango = { version = "0.22" }
pangocairo = { version = "0.22" }
pulldown-cmark = "0.13"
image = "0.25"
zip = "8.0"
quick-xml = "0.41"

[[bin]]
name = "decks"
path = "src/main.rs"
