[package]
name = "letters-core"
version = "0.1.0"
edition = "2021"

# GTK-free document engine for Letters: model (paragraphs + styled runs),
# Markdown/DOCX I/O, editing operations. Must never depend on GTK — see
# letters-core/DESIGN.md and docs/DEVELOPMENT.md.
[dependencies]
pulldown-cmark = "0.12"
rdocx = { git = "https://github.com/hanthor/rdocx.git", rev = "67c6e85" }

[lib]
name = "letters_core"
path = "src/lib.rs"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
