[package]
name = "letters-core"
version = "0.1.0"
edition = "2021"
description = "GTK-free rich-text document engine: paragraphs of styled runs with Markdown and DOCX I/O, fidelity-tested against LibreOffice"
license = "GPL-3.0-or-later"
repository = "https://github.com/tuna-os/gtk-office-suite"
keywords = ["document", "docx", "markdown", "rich-text", "wysiwyg"]
categories = ["text-processing", "parser-implementations"]

# GTK-free document engine for Letters: model (paragraphs + styled runs),
# Markdown/DOCX I/O, editing operations. Must never depend on GTK — see
# letters-core/DESIGN.md and docs/DEVELOPMENT.md.
[dependencies]
pulldown-cmark = "0.12"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rdocx = { git = "https://github.com/hanthor/rdocx.git", rev = "61be17d" }
zip = { version = "2.0", default-features = false, features = ["deflate"] }
quick-xml = "0.31"

[lib]
name = "letters_core"
path = "src/lib.rs"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
