[package]
name = "letters"
version = "0.1.0"
edition = "2021"

[dependencies]
gtk4 = { version = "0.11", features = ["gnome_44", "v4_14"] }
libadwaita = { version = "0.9", features = ["v1_5"] }
pulldown-cmark = "0.12"
cairo-rs = { version = "0.22", features = ["use_glib"] }
pango = "0.22"
pangocairo = "0.22"
zspell = { version = "0.5", features = ["unstable-suggestions"] }
suite-common = { path = "../suite-common" }
letters-core = { path = "../letters-core" }
suite-export = { path = "../suite-export" }
rdocx = { git = "https://github.com/hanthor/rdocx.git", rev = "61be17d" }
rdocx-oxml = "0.1.2"

[[bin]]
name = "letters"
path = "src/main.rs"
