[package]
name = "tables-core"
version = "0.1.0"
edition = "2021"

# GTK-free spreadsheet core: engine (IronCalc), sheet model, undo commands,
# file I/O, Typst export. Must never depend on gtk4/libadwaita/cairo — see
# docs/DEVELOPMENT.md layering rule.
[dependencies]
suite-common-core = { path = "../suite-common-core" }
suite-export = { path = "../suite-export" }
ironcalc_base = "0.7"
calamine = "0.26"
rust_xlsxwriter = "0.80"
regex = "1"

[dev-dependencies]
tempfile = "3"

[lib]
name = "tables_core"
path = "src/lib.rs"
