[package]
name = "tables"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0-or-later"

[dependencies]
gtk4 = { version = "0.11", features = ["v4_14"] }
libadwaita = { version = "0.9", features = ["v1_5"] }
suite-common = { path = "../suite-common" }
tables-core = { path = "../tables-core" }
pangocairo = "0.22"

[[bin]]
name = "tables"
path = "src/main.rs"

[dev-dependencies]
tempfile = "3"
